// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Slices/Section For Demo Default 1`] = `
<section
  className="container section_for_demo theme_default "
>
  <div
    className="container_content spacing_large width_fluid"
  >
    <header>
      <h1>
        Target magnetic systems
      </h1>
      <p>
        Veniam nulla cillum laboris minim amet duis fugiat. Adipisicing incididunt labore non excepteur est sunt non voluptate ex labore excepteur et anim.
      </p>
    </header>
    <div
      className="grid gap_20 layout_is_one_third"
    >
      <a
        className="card text_alignment_left theme_default"
        href="https://ample.co"
        rel="noreferrer"
        target="_blank"
      >
        <div
          className="imgix_image card_image"
        >
          <img
            alt="Placeholder image"
            className=""
            data-sizes="320, 400, 480, 600, 720, 840, 960, 1040, 1140, 1280, 1440, 1600, 1920, 2560, 3360"
            data-src="https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1"
            data-srcset="https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=100 100w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=116 116w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=135 135w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=156 156w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=181 181w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=210 210w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=244 244w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=283 283w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=328 328w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=380 380w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=441 441w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=512 512w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=594 594w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=689 689w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=799 799w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=927 927w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=1075 1075w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=1247 1247w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=1446 1446w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=1678 1678w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=1946 1946w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=2257 2257w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=2619 2619w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=3038 3038w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=3524 3524w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=4087 4087w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=4741 4741w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=5500 5500w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=6380 6380w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=7401 7401w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=8192 8192w"
          />
        </div>
        <div
          className="card_content"
        >
          <p>
            Ullamco consectetur elit veniam reprehenderit aliqua et anim culpa mollit quis eiusmod velit labore duis. Laboris nulla proident duis nisi. Anim elit esse Lorem ut laboris commodo commodo aliqua nostrud cupidatat dolore aute occaecat.
          </p>
          <p>
            Tempor voluptate ad cupidatat reprehenderit ea anim qui laboris sint adipisicing duis fugiat.
          </p>
          <button
            className="button theme_default"
          >
            Quis ex consequat.
          </button>
        </div>
      </a>
      <a
        className="card text_alignment_left theme_default"
        href="https://ample.co"
        rel="noreferrer"
        target="_blank"
      >
        <div
          className="imgix_image card_image"
        >
          <img
            alt="Placeholder image"
            className=""
            data-sizes="320, 400, 480, 600, 720, 840, 960, 1040, 1140, 1280, 1440, 1600, 1920, 2560, 3360"
            data-src="https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1"
            data-srcset="https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=100 100w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=116 116w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=135 135w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=156 156w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=181 181w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=210 210w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=244 244w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=283 283w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=328 328w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=380 380w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=441 441w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=512 512w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=594 594w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=689 689w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=799 799w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=927 927w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=1075 1075w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=1247 1247w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=1446 1446w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=1678 1678w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=1946 1946w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=2257 2257w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=2619 2619w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=3038 3038w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=3524 3524w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=4087 4087w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=4741 4741w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=5500 5500w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=6380 6380w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=7401 7401w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=8192 8192w"
          />
        </div>
        <div
          className="card_content"
        >
          <p>
            Ullamco consectetur elit veniam reprehenderit aliqua et anim culpa mollit quis eiusmod velit labore duis. Laboris nulla proident duis nisi. Anim elit esse Lorem ut laboris commodo commodo aliqua nostrud cupidatat dolore aute occaecat.
          </p>
          <p>
            Tempor voluptate ad cupidatat reprehenderit ea anim qui laboris sint adipisicing duis fugiat.
          </p>
          <button
            className="button theme_default"
          >
            Quis ex consequat.
          </button>
        </div>
      </a>
      <a
        className="card text_alignment_left theme_default"
        href="https://ample.co"
        rel="noreferrer"
        target="_blank"
      >
        <div
          className="imgix_image card_image"
        >
          <img
            alt="Placeholder image"
            className=""
            data-sizes="320, 400, 480, 600, 720, 840, 960, 1040, 1140, 1280, 1440, 1600, 1920, 2560, 3360"
            data-src="https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1"
            data-srcset="https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=100 100w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=116 116w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=135 135w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=156 156w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=181 181w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=210 210w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=244 244w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=283 283w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=328 328w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=380 380w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=441 441w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=512 512w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=594 594w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=689 689w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=799 799w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=927 927w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=1075 1075w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=1247 1247w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=1446 1446w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=1678 1678w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=1946 1946w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=2257 2257w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=2619 2619w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=3038 3038w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=3524 3524w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=4087 4087w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=4741 4741w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=5500 5500w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=6380 6380w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=7401 7401w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=8192 8192w"
          />
        </div>
        <div
          className="card_content"
        >
          <p>
            Ullamco consectetur elit veniam reprehenderit aliqua et anim culpa mollit quis eiusmod velit labore duis. Laboris nulla proident duis nisi. Anim elit esse Lorem ut laboris commodo commodo aliqua nostrud cupidatat dolore aute occaecat.
          </p>
          <p>
            Tempor voluptate ad cupidatat reprehenderit ea anim qui laboris sint adipisicing duis fugiat.
          </p>
          <button
            className="button theme_default"
          >
            Quis ex consequat.
          </button>
        </div>
      </a>
    </div>
  </div>
</section>
`;

exports[`Storyshots Slices/Section For Demo Without Header 1`] = `
<section
  className="container section_for_demo theme_withoutHeader "
>
  <div
    className="container_content spacing_large width_fluid"
  >
    <div
      className="grid gap_20 layout_is_one_third"
    >
      <a
        className="card text_alignment_left theme_with_button"
        href="https://ample.co"
        rel="noreferrer"
        target="_blank"
      >
        <div
          className="imgix_image card_image"
        >
          <img
            alt="Placeholder image"
            className=""
            data-sizes="320, 400, 480, 600, 720, 840, 960, 1040, 1140, 1280, 1440, 1600, 1920, 2560, 3360"
            data-src="https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1"
            data-srcset="https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=100 100w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=116 116w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=135 135w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=156 156w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=181 181w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=210 210w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=244 244w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=283 283w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=328 328w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=380 380w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=441 441w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=512 512w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=594 594w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=689 689w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=799 799w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=927 927w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=1075 1075w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=1247 1247w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=1446 1446w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=1678 1678w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=1946 1946w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=2257 2257w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=2619 2619w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=3038 3038w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=3524 3524w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=4087 4087w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=4741 4741w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=5500 5500w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=6380 6380w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=7401 7401w,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=8192 8192w"
          />
        </div>
        <div
          className="card_content"
        >
          <p>
            Ullamco consectetur elit veniam reprehenderit aliqua et anim culpa mollit quis eiusmod velit labore duis. Laboris nulla proident duis nisi. Anim elit esse Lorem ut laboris commodo commodo aliqua nostrud cupidatat dolore aute occaecat.
          </p>
          <p>
            Tempor voluptate ad cupidatat reprehenderit ea anim qui laboris sint adipisicing duis fugiat.
          </p>
          <button
            className="button theme_default"
          >
            Quis ex consequat.
          </button>
        </div>
      </a>
      <a
        className="card text_alignment_left theme_with_button"
        href="https://ample.co"
        rel="noreferrer"
        target="_blank"
      >
        <div
          className="imgix_image card_image"
        >
          <img
            alt="Placeholder image"
            className=""
            data-sizes="320, 400, 480, 600, 720, 840, 960, 1040, 1140, 1280, 1440, 1600, 1920, 2560, 3360"
            data-src="https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1"
            data-srcset="https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=100 100w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=116 116w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=135 135w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=156 156w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=181 181w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=210 210w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=244 244w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=283 283w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=328 328w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=380 380w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=441 441w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=512 512w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=594 594w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=689 689w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=799 799w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=927 927w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=1075 1075w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=1247 1247w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=1446 1446w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=1678 1678w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=1946 1946w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=2257 2257w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=2619 2619w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=3038 3038w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=3524 3524w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=4087 4087w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=4741 4741w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=5500 5500w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=6380 6380w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=7401 7401w,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=8192 8192w"
          />
        </div>
        <div
          className="card_content"
        >
          <p>
            Ullamco consectetur elit veniam reprehenderit aliqua et anim culpa mollit quis eiusmod velit labore duis. Laboris nulla proident duis nisi. Anim elit esse Lorem ut laboris commodo commodo aliqua nostrud cupidatat dolore aute occaecat.
          </p>
          <p>
            Tempor voluptate ad cupidatat reprehenderit ea anim qui laboris sint adipisicing duis fugiat.
          </p>
          <button
            className="button theme_default"
          >
            Quis ex consequat.
          </button>
        </div>
      </a>
      <a
        className="card text_alignment_left theme_with_button"
        href="https://ample.co"
        rel="noreferrer"
        target="_blank"
      >
        <div
          className="imgix_image card_image"
        >
          <img
            alt="Placeholder image"
            className=""
            data-sizes="320, 400, 480, 600, 720, 840, 960, 1040, 1140, 1280, 1440, 1600, 1920, 2560, 3360"
            data-src="https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1"
            data-srcset="https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=100 100w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=116 116w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=135 135w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=156 156w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=181 181w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=210 210w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=244 244w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=283 283w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=328 328w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=380 380w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=441 441w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=512 512w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=594 594w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=689 689w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=799 799w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=927 927w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=1075 1075w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=1247 1247w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=1446 1446w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=1678 1678w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=1946 1946w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=2257 2257w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=2619 2619w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=3038 3038w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=3524 3524w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=4087 4087w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=4741 4741w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=5500 5500w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=6380 6380w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=7401 7401w,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&auto=format&ixlib=react-9.5.1-beta.1&w=8192 8192w"
          />
        </div>
        <div
          className="card_content"
        >
          <p>
            Ullamco consectetur elit veniam reprehenderit aliqua et anim culpa mollit quis eiusmod velit labore duis. Laboris nulla proident duis nisi. Anim elit esse Lorem ut laboris commodo commodo aliqua nostrud cupidatat dolore aute occaecat.
          </p>
          <p>
            Tempor voluptate ad cupidatat reprehenderit ea anim qui laboris sint adipisicing duis fugiat.
          </p>
          <button
            className="button theme_default"
          >
            Quis ex consequat.
          </button>
        </div>
      </a>
    </div>
  </div>
</section>
`;
